--- a/index.html
+++ b/index.html
@@ -85,6 +85,67 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .card{padding:18px;border-radius:14px;border:1px solid var(--line);background:#fff;box-shadow:0 2px 10px rgba(0,0,0,.03)}
 .card h3{margin:0 0 6px;font-size:18px}
 .card p{margin:0;color:#464b63;font-size:15px}
+
+/* PLAN NOTE */
+.plan-note{background:#f5f3ff;border:1px dashed #cabfff;color:#2c2466;padding:12px 14px;border-radius:12px;text-align:center;margin-top:10px;font-size:14px}
+
+/* TABLE (comparativos) */
+.table-box{
+  background:var(--accent);
+  border:1px solid var(--accent-strong);
+  border-radius:16px;
+  padding:14px;
+  margin-top:16px;
+  box-shadow:0 6px 20px rgba(31,35,62,.06) inset;
+}
+.table-box h3{margin:4px 0 12px;text-align:center;color:#221b62}
+.table-scroll{overflow:auto;-webkit-overflow-scrolling:touch}
+.compare{width:100%;border-collapse:separate;border-spacing:0;min-width:760px;background:#fff;border-radius:12px;overflow:hidden}
+.compare th,.compare td{border-bottom:1px solid var(--line);padding:12px 14px;font-size:14px;vertical-align:top}
+.compare thead th{
+  background:#f1ecff;color:#2c2466;text-align:left;border-bottom:1px solid var(--accent-strong);
+  position:sticky;top:0;z-index:1;
+}
+.compare tbody tr:nth-child(even){background:#fafaff}
+.col-plan{font-weight:700;color:#1a1d33}
+.head-plan{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
+.pill{display:inline-block;padding:4px 8px;border-radius:999px;background:#efe7ff;border:1px solid #d9ccff;font-weight:800;font-size:11px;color:#3b2db3}
+.price-big{display:block;font-weight:900;font-size:20px;color:var(--brand);margin-top:4px}
+.small{color:#7278a3;font-size:12px}
+
+/* Destaque coluna */
+.compare.highlight-col-3 thead th:nth-child(3),
+.compare.highlight-col-3 tbody td:nth-child(3){background:#fffdfb;}
+.compare.highlight-col-3 tbody tr:nth-child(even) td:nth-child(3){background:#fff7ef;}
+.price-row td{background:#f8f5ff !important;border-top:1px solid var(--accent-strong);border-bottom:1px solid var(--accent-strong)}
+.cta-row td{background:#fbfbff}
+
+/* STICKY CTA (mobile) */
+.sticky-cta{position:fixed;left:0;right:0;bottom:0;z-index:40;background:#fff;border-top:1px solid var(--line);padding:10px 16px;display:none;gap:10px}
+.sticky-cta a{flex:1;text-align:center}
+
+/* WhatsApp Float */
+.whats{position:fixed;right:14px;bottom:96px;z-index:60;background:#25D366;color:#fff;border-radius:999px;padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
+
+/* Toast */
+#toast{
+  position:fixed;bottom:20px;left:50%;transform:translateX(-50%);
+  background:#34c759;color:#fff;padding:14px 22px;border-radius:8px;
+  font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);
+  display:none;z-index:999;font-size:15px;
+}
+
+/* MOBILE */
+@media (max-width:980px){
+  .hero-grid{grid-template-columns:1fr}
+  .mockup img{ width: min(86vw, 330px); }
+  .grid-3,.grid-2{grid-template-columns:1fr}
+  .menu-toggle{display:block}
+  .nav-links{display:none;position:absolute;left:0;right:0;top:calc(100% + 1px);background:#fff;border-top:1px solid var(--line);padding:10px 20px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
+  .nav-links.open{display:flex;flex-direction:column;gap:12px}
+  .nav-links .btn.primary{width:100%;text-align:center}
+  .sticky-cta{display:flex}
+}
 </style>
 </head>
 <body>
@@ -105,7 +166,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
       <a href="#planos">Planos</a>
-      <a class="btn primary" href="#contato" aria-label="Fale com a equipe MatchWork">Falar agora</a>
+      <a class="btn primary" href="#contato">Falar agora</a>
     </nav>
   </div>
 </div>
@@ -131,24 +192,16 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     </div>
   </div>
 </header>
+
 <!-- O QUE FAZ -->
 <section id="o-que-faz" class="band section">
   <div class="container">
     <h2>O que o MatchWork faz</h2>
     <p class="sub">Mais que vagas: um ecossistema de empregabilidade e evolução profissional.</p>
     <div class="grid-3">
-      <div class="card">
-        <h3>Matching rápido</h3>
-        <p>Like/dislike dos dois lados e recomendações automáticas por perfil e competências.</p>
-      </div>
-      <div class="card">
-        <h3>Banco de Talentos</h3>
-        <p>Perfis de quem busca vaga e de profissionais empregados abertos a evolução, networking e oportunidades.</p>
-      </div>
-      <div class="card">
-        <h3>Carreira em movimento</h3>
-        <p>Trilhas, conteúdos e insights para crescer, mesmo já empregado. Bem+Match para bem-estar e foco.</p>
-      </div>
+      <div class="card"><h3>Matching rápido</h3><p>Like/dislike dos dois lados e recomendações automáticas.</p></div>
+      <div class="card"><h3>Banco de Talentos</h3><p>Perfis de candidatos ativos e profissionais empregados.</p></div>
+      <div class="card"><h3>Carreira em movimento</h3><p>Trilhas, conteúdos e Bem+Match para evolução contínua.</p></div>
     </div>
   </div>
 </section>
@@ -157,11 +210,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="como-funciona" class="section">
   <div class="container">
     <h2>Como funciona</h2>
-    <p class="sub">Um fluxo único que atende empresas, candidatos ativos e profissionais empregados.</p>
+    <p class="sub">Um fluxo único que atende empresas e profissionais.</p>
     <div class="grid-3">
-      <div class="card"><h3>1) Cadastro</h3><p>Candidatos/profissionais completam perfil e testes; empresas publicam vagas em minutos.</p></div>
-      <div class="card"><h3>2) Matching & Evolução</h3><p>Like/dislike + recomendações automáticas + trilhas e Bem+Match para quem quer evoluir.</p></div>
-      <div class="card"><h3>3) Resultados</h3><p>Empresas contratam mais rápido. Profissionais crescem e acompanham o mercado.</p></div>
+      <div class="card"><h3>1) Cadastro</h3><p>Perfil completo, testes e publicação de vagas.</p></div>
+      <div class="card"><h3>2) Matching & Evolução</h3><p>Recomendações, trilhas e Bem+Match.</p></div>
+      <div class="card"><h3>3) Resultados</h3><p>Contratações rápidas e profissionais preparados.</p></div>
     </div>
   </div>
 </section>
@@ -172,18 +225,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Bem+Match</h2>
     <p class="sub">Bem-estar e apoio emocional integrados à jornada profissional.</p>
     <div class="grid-2">
-      <div class="card">
-        <h3>Para profissionais</h3>
-        <p>Conteúdos, rotinas e grupos de apoio para equilíbrio emocional, seja buscando vaga ou já empregado.</p>
-      </div>
-      <div class="card">
-        <h3>Para empresas</h3>
-        <p>Mais candidatos prontos e engajados, melhor experiência no processo e menos entrevistas improdutivas.</p>
-      </div>
+      <div class="card"><h3>Para profissionais</h3><p>Conteúdos e grupos de apoio para equilíbrio emocional.</p></div>
+      <div class="card"><h3>Para empresas</h3><p>Candidatos mais preparados e engajados.</p></div>
     </div>
-    <p class="sub" style="margin-top:8px">
-      Engajamento no Bem+Match sinaliza <b>prontidão e comprometimento</b> — reduz tempo de contratação e melhora adaptação.
-    </p>
   </div>
 </section>
 
@@ -191,25 +235,13 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="gamificacao" class="section">
   <div class="container">
     <h2>Gamificação (MatchPoints)</h2>
-    <p class="sub">Pontos para incentivar evolução contínua e sinalizar engajamento para empresas.</p>
+    <p class="sub">Pontos simples para incentivar evolução contínua e engajamento.</p>
     <div class="grid-2">
-      <div class="card">
-        <h3>Como ganhar</h3>
-        <ul style="margin:0;padding-left:18px">
-          <li>Completar perfil e testes iniciais</li>
-          <li>Aplicar e comparecer a entrevistas</li>
-          <li>Concluir módulos das trilhas</li>
-          <li>Manter streaks semanais de aprendizado</li>
-          <li>Dar/receber feedbacks</li>
-        </ul>
+      <div class="card"><h3>Como ganhar</h3>
+        <ul><li>Completar perfil e testes</li><li>Aplicar a vagas</li><li>Concluir trilhas</li><li>Manter streaks</li></ul>
       </div>
-      <div class="card">
-        <h3>Como usar</h3>
-        <ul style="margin:0;padding-left:18px">
-          <li>Destaque no app</li>
-          <li>Acesso a conteúdos e microcertificações</li>
-          <li>Benefícios do Bem+Match</li>
-        </ul>
+      <div class="card"><h3>Como usar</h3>
+        <ul><li>Destaque no app</li><li>Acesso a microcertificações</li><li>Benefícios exclusivos</li></ul>
       </div>
     </div>
   </div>
@@ -221,68 +253,35 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
-    <!-- Nota -->
-    <div class="plan-note">
-      <b>Plano Gratuito para Empresas:</b> 1 vaga por 7 dias, até 5 perfis com contato parcial.
-      <br>Para preencher com contato completo e sem limite, use o <b>One-Shot</b>.
-    </div>
+    <div class="plan-note"><b>Plano Gratuito para Empresas:</b> 1 vaga por 7 dias, até 5 perfis sugeridos.</div>
 
-    <!-- TABELA EMPRESAS -->
+    <!-- Empresas -->
     <div id="planos-empresas" class="table-box">
       <h3>Planos para empresas</h3>
       <div class="table-scroll">
         <table class="compare highlight-col-3">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito (7 dias)<br><span class="price-big">R$ 0</span></th>
-              <th>One-Shot <span class="pill">Recomendado</span><br><span class="price-big">R$ 400 / vaga</span></th>
-              <th>Assinatura<br><span class="price-big">R$ 150 / mês</span><br><span class="small">ou R$ 1.500/ano</span></th>
-            </tr>
-          </thead>
+          <thead><tr><th>Recursos</th><th>Gratuito</th><th>One-Shot</th><th>Assinatura</th></tr></thead>
           <tbody>
             <tr><td>Vagas ativas</td><td>1</td><td>1</td><td>Ilimitadas</td></tr>
-            <tr><td>Duração</td><td>7 dias</td><td>Até preencher (máx. 3 meses)</td><td>Recorrente</td></tr>
-            <tr><td>Perfis & contato</td><td>Até 5 (parcial)</td><td>Ilimitados (completo)</td><td>Ilimitados (completo)</td></tr>
-            <tr><td>Indicações automáticas</td><td>Básicas</td><td>Ilimitadas</td><td>Ilimitadas</td></tr>
+            <tr><td>Perfis & contato</td><td>5 • parcial</td><td>Ilimitados • completo</td><td>Ilimitados • completo</td></tr>
             <tr><td>Banco de Talentos</td><td>—</td><td>—</td><td>Incluso</td></tr>
-            <tr><td>Relatórios</td><td>—</td><td>—</td><td>Básicos</td></tr>
-            <tr class="cta-row">
-              <td></td>
-              <td><a class="btn ghost" href="#contato">Ativar</a></td>
-              <td><a class="btn primary" href="#contato">Publicar</a></td>
-              <td><a class="btn primary" href="#contato">Assinar</a></td>
-            </tr>
+            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 400 / vaga</td><td>R$ 150/mês</td></tr>
           </tbody>
         </table>
       </div>
     </div>
 
-    <!-- TABELA CANDIDATOS -->
+    <!-- Candidatos -->
     <div id="planos-candidato" class="table-box">
-      <h3>Planos para candidatos & profissionais</h3>
+      <h3>Planos para candidatos</h3>
       <div class="table-scroll">
         <table class="compare">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito<br><span class="price-big">R$ 0</span></th>
-              <th>Premium<br><span class="price-big">R$ 14,90 / mês</span><br><span class="small">ou R$ 149/ano</span></th>
-            </tr>
-          </thead>
+          <thead><tr><th>Recursos</th><th>Gratuito</th><th>Premium</th></tr></thead>
           <tbody>
-            <tr><td>Acesso a vagas</td><td>Incluso</td><td>+ prioridade</td></tr>
-            <tr><td>Destaque nas buscas</td><td>—</td><td>Sim</td></tr>
+            <tr><td>Acesso a vagas</td><td>Incluso</td><td>Prioritário</td></tr>
+            <tr><td>Destaque</td><td>—</td><td>Sim</td></tr>
             <tr><td>Relatório de carreira</td><td>—</td><td>Completo</td></tr>
-            <tr><td>Trilhas</td><td>Básicas</td><td>Completas</td></tr>
-            <tr><td>Bem+Match</td><td>Básico</td><td>Expandido</td></tr>
-            <tr><td>MatchPoints</td><td>Limitado</td><td>Ampliado</td></tr>
-            <tr><td>Suporte</td><td>Básico</td><td>Prioritário</td></tr>
-            <tr class="cta-row">
-              <td></td>
-              <td><a class="btn ghost" href="#contato">Criar conta</a></td>
-              <td><a class="btn primary" href="#contato">Ser Premium</a></td>
-            </tr>
+            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 14,90/mês</td></tr>
           </tbody>
         </table>
       </div>
@@ -294,10 +293,10 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section class="section">
   <div class="container">
     <h2>Segurança e conformidade</h2>
-    <p class="sub">O MatchWork segue a LGPD e mantém dados em ambiente seguro.</p>
+    <p class="sub">O MatchWork segue a <b>LGPD</b> e mantém dados em ambiente seguro.</p>
     <div class="grid-2">
-      <div class="card"><h3>Empresas</h3><p>Proteção de dados sensíveis e conformidade legal.</p></div>
-      <div class="card"><h3>Candidatos</h3><p>Dados usados apenas para matching, nunca vendidos.</p></div>
+      <div class="card"><h3>Para empresas</h3><p>Proteção de dados sensíveis e relatórios seguros.</p></div>
+      <div class="card"><h3>Para candidatos</h3><p>Dados usados apenas para matching, nunca vendidos.</p></div>
     </div>
   </div>
 </section>
@@ -306,8 +305,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="contato" class="section">
   <div class="container">
     <h2 style="text-align:center">Fale com a gente</h2>
-    <p class="sub">Seja empresa, candidato ou profissional já empregado.</p>
-
     <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form">
       <input class="input" name="nome" placeholder="Seu nome" required>
       <input class="input" type="email" name="email" placeholder="E-mail" required>
@@ -315,43 +312,33 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <option value="" disabled selected>Sou...</option>
         <option value="empresa">Empresa</option>
         <option value="candidato">Candidato ativo</option>
-        <option value="profissional">Profissional já empregado</option>
-        <option value="organizacao">Organização/Parceria</option>
+        <option value="profissional">Profissional empregado</option>
       </select>
       <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
-
-      <input type="hidden" name="_subject" value="Novo contato — Site MatchWork">
-      <input type="hidden" name="_template" value="box">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://appmatchwork.com.br/#contato-ok">
-
       <button class="btn primary" type="submit">Enviar</button>
     </form>
   </div>
 </section>
 
-<footer class="section" style="padding:26px 0;border-top:1px solid #e9e9f2;color:#71779a;text-align:center">
-  <div class="container">© 2025 MatchWork — Indaial, Santa Catarina</div>
+<footer class="section" style="text-align:center;padding:26px 0;border-top:1px solid var(--line);color:#71779a">
+  © 2025 MatchWork — <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
 </footer>
+
+<!-- CTA mobile -->
+<div class="sticky-cta">
+  <a class="btn ghost" href="#planos">Ver planos</a>
+  <a class="btn primary" href="#contato">Falar agora</a>
+</div>
 
 <!-- WhatsApp -->
 <a class="whats" href="https://wa.me/5547999639417?text=Quero%20conhecer%20o%20MatchWork">WhatsApp</a>
 
 <script>
-/* menu mobile */
-const toggle=document.querySelector('.menu-toggle');
-const links=document.querySelector('.nav-links');
-if(toggle && links){
-  toggle.addEventListener('click',()=>{
-    const open=links.classList.toggle('open');
-    toggle.setAttribute('aria-expanded',open?'true':'false');
-  });
-  links.querySelectorAll('a').forEach(a=>{
-    a.addEventListener('click',()=>{
-      links.classList.remove('open');
-      toggle.setAttribute('aria-expanded','false');
-    });
-  });
+/* Menu mobile */
+const toggle=document.querySelector('.menu-toggle'),links=document.querySelector('.nav-links');
+if(toggle&&links){
+  toggle.addEventListener('click',()=>{const open=links.classList.toggle('open');toggle.setAttribute('aria-expanded',open?'true':'false')});
+  links.querySelectorAll('a').forEach(a=>a.addEventListener('click',()=>{links.classList.remove('open');toggle.setAttribute('aria-expanded','false')}))
 }
 </script>
 </body>
