Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 </style>
 </head>
 <body>
-
 <!-- NAV -->
 <div class="topbar">
   <div class="container inner">
@@ -246,7 +245,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     </div>
   </div>
 </section>
-
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
@@ -260,7 +258,14 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <h3>Planos para empresas</h3>
       <div class="table-scroll">
         <table class="compare highlight-col-3">
-          <thead><tr><th>Recursos</th><th>Gratuito</th><th>One-Shot</th><th>Assinatura</th></tr></thead>
+          <thead>
+            <tr>
+              <th>Recursos</th>
+              <th>Gratuito</th>
+              <th>One-Shot</th>
+              <th>Assinatura</th>
+            </tr>
+          </thead>
           <tbody>
             <tr><td>Vagas ativas</td><td>1</td><td>1</td><td>Ilimitadas</td></tr>
             <tr><td>Perfis & contato</td><td>5 • parcial</td><td>Ilimitados • completo</td><td>Ilimitados • completo</td></tr>
@@ -276,7 +281,13 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <h3>Planos para candidatos</h3>
       <div class="table-scroll">
         <table class="compare">
-          <thead><tr><th>Recursos</th><th>Gratuito</th><th>Premium</th></tr></thead>
+          <thead>
+            <tr>
+              <th>Recursos</th>
+              <th>Gratuito</th>
+              <th>Premium</th>
+            </tr>
+          </thead>
           <tbody>
             <tr><td>Acesso a vagas</td><td>Incluso</td><td>Prioritário</td></tr>
             <tr><td>Destaque</td><td>—</td><td>Sim</td></tr>
@@ -320,8 +331,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
+<!-- FOOTER -->
 <footer class="section" style="text-align:center;padding:26px 0;border-top:1px solid var(--line);color:#71779a">
-  © 2025 MatchWork — <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
+  © 2025 MatchWork — Indaial/SC • <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
 </footer>
 
 <!-- CTA mobile -->
