--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 /* WhatsApp Float */
 .whats{position:fixed;right:14px;bottom:96px;z-index:60;background:#25D366;color:#fff;border-radius:999px;padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
 
+/* Social icons footer */
+.social-icons{margin-top:14px;display:flex;justify-content:center;gap:20px}
+.social-icons a svg{width:22px;height:22px;fill:#71779a;transition:.2s}
+.social-icons a:hover svg{fill:var(--brand)}
+
 /* Toast */
 #toast{
   position:fixed;bottom:20px;left:50%;transform:translateX(-50%);
@@ -245,6 +250,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     </div>
   </div>
 </section>
+
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
@@ -333,7 +339,16 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
 <!-- FOOTER -->
 <footer class="section" style="text-align:center;padding:26px 0;border-top:1px solid var(--line);color:#71779a">
-  © 2025 MatchWork — Indaial/SC • <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
+  © 2025 MatchWork — Indaial/SC • 
+  <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/matchwork.oficial" target="_blank" aria-label="Instagram">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm9 1.75a1 1 0 1 1 0 2.001 1 1 0 0 1 0-2zm-5.25 2a5.75 5.75 0 1 1 0 11.5 5.75 5.75 0 0 1 0-11.5zm0 1.5a4.25 4.25 0 1 0 0 8.5 4.25 4.25 0 0 0 0-8.5z"/></svg>
+    </a>
+    <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank" aria-label="LinkedIn">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6S0 4.88 0 3.5 1.12 1 2.5 1 5 2.12 5 3.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.1c.5-.9 1.8-1.8 3.7-1.8 4 0 4.7 2.6 4.7 6v9.6h-4V15c0-2.2-.1-5-3-5-3 0-3.4 2.3-3.4 4.8V24h-4V8z"/></svg>
+    </a>
+  </div>
 </footer>
 
 <!-- CTA mobile -->
