--- a/index.html
+++ b/index.html
@@ -90,22 +90,12 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .plan-note{background:#f5f3ff;border:1px dashed #cabfff;color:#2c2466;padding:12px 14px;border-radius:12px;text-align:center;margin-top:10px;font-size:14px}
 
 /* TABLE (comparativos) */
-.table-box{
-  background:var(--accent);
-  border:1px solid var(--accent-strong);
-  border-radius:16px;
-  padding:14px;
-  margin-top:16px;
-  box-shadow:0 6px 20px rgba(31,35,62,.06) inset;
-}
+.table-box{background:var(--accent);border:1px solid var(--accent-strong);border-radius:16px;padding:14px;margin-top:16px;box-shadow:0 6px 20px rgba(31,35,62,.06) inset;}
 .table-box h3{margin:4px 0 12px;text-align:center;color:#221b62}
 .table-scroll{overflow:auto;-webkit-overflow-scrolling:touch}
 .compare{width:100%;border-collapse:separate;border-spacing:0;min-width:760px;background:#fff;border-radius:12px;overflow:hidden}
 .compare th,.compare td{border-bottom:1px solid var(--line);padding:12px 14px;font-size:14px;vertical-align:top}
-.compare thead th{
-  background:#f1ecff;color:#2c2466;text-align:left;border-bottom:1px solid var(--accent-strong);
-  position:sticky;top:0;z-index:1;
-}
+.compare thead th{background:#f1ecff;color:#2c2466;text-align:left;border-bottom:1px solid var(--accent-strong);position:sticky;top:0;z-index:1;}
 .compare tbody tr:nth-child(even){background:#fafaff}
 .col-plan{font-weight:700;color:#1a1d33}
 .head-plan{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
@@ -133,12 +123,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .social-icons a:hover svg{fill:var(--brand)}
 
 /* Toast */
-#toast{
-  position:fixed;bottom:20px;left:50%;transform:translateX(-50%);
-  background:#34c759;color:#fff;padding:14px 22px;border-radius:8px;
-  font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);
-  display:none;z-index:999;font-size:15px;
-}
+#toast{position:fixed;bottom:20px;left:50%;transform:translateX(-50%);background:#34c759;color:#fff;padding:14px 22px;border-radius:8px;font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);display:none;z-index:999;font-size:15px;}
 
 /* MOBILE */
 @media (max-width:980px){
@@ -169,6 +154,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <a href="#o-que-faz">O que faz</a>
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
+      <a href="#testes">Testes & Capacitação</a>
       <a href="#planos">Planos</a>
       <a class="btn primary" href="#contato">Falar agora</a>
     </nav>
@@ -235,8 +221,20 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
+<!-- TESTES & CAPACITAÇÃO -->
+<section id="testes" class="section">
+  <div class="container">
+    <h2>Testes & Capacitação</h2>
+    <p class="sub">Ferramentas para autoconhecimento, empregabilidade e evolução contínua.</p>
+    <div class="grid-2">
+      <div class="card"><h3>Testes profissionais</h3><p>Vocacional, comportamental e de aptidão, para alinhar talentos às melhores oportunidades.</p></div>
+      <div class="card"><h3>Capacitação prática</h3><p>Quizzes, trilhas e cursos que ajudam candidatos e profissionais a evoluir no ambiente de trabalho.</p></div>
+    </div>
+  </div>
+</section>
+
 <!-- GAMIFICAÇÃO -->
-<section id="gamificacao" class="section">
+<section id="gamificacao" class="band section">
   <div class="container">
     <h2>Gamificação (MatchPoints)</h2>
     <p class="sub">Pontos simples para incentivar evolução contínua e engajamento.</p>
