--- a/index.html
+++ b/index.html
@@ -79,51 +79,31 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .section h2{text-align:center;color:#1a1d33;font-size:clamp(22px,3.5vw,34px);letter-spacing:-.3px;margin:0 0 10px}
 .section p.sub{color:var(--muted);text-align:center;margin:0 auto 12px;max-width:760px}
 
-/* SIMPLE CARDS */
+/* CARDS */
 .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:16px}
 .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:16px}
-.card{padding:18px;border-radius:14px;border:1px solid var(--line);background:#fff;box-shadow:0 2px 10px rgba(0,0,0,.03)}
+.card{padding:22px;border-radius:16px;border:1px solid var(--line);background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.04);transition:.2s}
+.card:hover{transform:translateY(-4px);box-shadow:0 8px 20px rgba(0,0,0,.08)}
 .card h3{margin:0 0 6px;font-size:18px}
 .card p{margin:0;color:#464b63;font-size:15px}
 
-/* PLAN NOTE */
-.plan-note{background:#f5f3ff;border:1px dashed #cabfff;color:#2c2466;padding:12px 14px;border-radius:12px;text-align:center;margin-top:10px;font-size:14px}
+/* PLANOS */
+.plans{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:32px}
+.plan-card{border:2px solid var(--line);border-radius:16px;padding:28px;text-align:center;background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.05);transition:.25s}
+.plan-card:hover{border-color:var(--brand);transform:translateY(-6px)}
+.plan-card h3{margin:0;font-size:20px;color:#1a1d33}
+.plan-card .price{font-size:26px;font-weight:900;color:var(--brand);margin:14px 0}
+.plan-card ul{list-style:none;padding:0;margin:0 0 16px}
+.plan-card ul li{margin:8px 0;color:#444}
+.plan-card .btn{width:100%}
+.plan-card.recommended{border-color:var(--brand);background:linear-gradient(180deg,#fff,#f9f6ff)}
+.plan-card .tag{display:inline-block;padding:4px 10px;border-radius:999px;background:var(--brand);color:#fff;font-size:12px;margin-bottom:10px}
 
-/* TABLE (comparativos) */
-.table-box{background:var(--accent);border:1px solid var(--accent-strong);border-radius:16px;padding:14px;margin-top:16px;box-shadow:0 6px 20px rgba(31,35,62,.06) inset;}
-.table-box h3{margin:4px 0 12px;text-align:center;color:#221b62}
-.table-scroll{overflow:auto;-webkit-overflow-scrolling:touch}
-.compare{width:100%;border-collapse:separate;border-spacing:0;min-width:760px;background:#fff;border-radius:12px;overflow:hidden}
-.compare th,.compare td{border-bottom:1px solid var(--line);padding:12px 14px;font-size:14px;vertical-align:top}
-.compare thead th{background:#f1ecff;color:#2c2466;text-align:left;border-bottom:1px solid var(--accent-strong);position:sticky;top:0;z-index:1;}
-.compare tbody tr:nth-child(even){background:#fafaff}
-.col-plan{font-weight:700;color:#1a1d33}
-.head-plan{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
-.pill{display:inline-block;padding:4px 8px;border-radius:999px;background:#efe7ff;border:1px solid #d9ccff;font-weight:800;font-size:11px;color:#3b2db3}
-.price-big{display:block;font-weight:900;font-size:20px;color:var(--brand);margin-top:4px}
-.small{color:#7278a3;font-size:12px}
-
-/* Destaque coluna */
-.compare.highlight-col-3 thead th:nth-child(3),
-.compare.highlight-col-3 tbody td:nth-child(3){background:#fffdfb;}
-.compare.highlight-col-3 tbody tr:nth-child(even) td:nth-child(3){background:#fff7ef;}
-.price-row td{background:#f8f5ff !important;border-top:1px solid var(--accent-strong);border-bottom:1px solid var(--accent-strong)}
-.cta-row td{background:#fbfbff}
-
-/* STICKY CTA (mobile) */
-.sticky-cta{position:fixed;left:0;right:0;bottom:0;z-index:40;background:#fff;border-top:1px solid var(--line);padding:10px 16px;display:none;gap:10px}
-.sticky-cta a{flex:1;text-align:center}
-
-/* WhatsApp Float */
-.whats{position:fixed;right:14px;bottom:96px;z-index:60;background:#25D366;color:#fff;border-radius:999px;padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
-
-/* Social icons footer */
-.social-icons{margin-top:14px;display:flex;justify-content:center;gap:20px}
-.social-icons a svg{width:22px;height:22px;fill:#71779a;transition:.2s}
-.social-icons a:hover svg{fill:var(--brand)}
-
-/* Toast */
-#toast{position:fixed;bottom:20px;left:50%;transform:translateX(-50%);background:#34c759;color:#fff;padding:14px 22px;border-radius:8px;font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);display:none;z-index:999;font-size:15px;}
+/* FORM */
+.form-box{max-width:600px;margin:0 auto;background:#fff;padding:32px;border-radius:18px;box-shadow:0 8px 28px rgba(0,0,0,.06)}
+.form-box h3{text-align:center;margin-bottom:20px}
+.form-box .input{width:100%;padding:14px 16px;margin-bottom:14px;border-radius:12px;border:1px solid var(--line);font-size:15px}
+.form-box button{width:100%}
 
 /* MOBILE */
 @media (max-width:980px){
@@ -134,7 +114,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   .nav-links{display:none;position:absolute;left:0;right:0;top:calc(100% + 1px);background:#fff;border-top:1px solid var(--line);padding:10px 20px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
   .nav-links.open{display:flex;flex-direction:column;gap:12px}
   .nav-links .btn.primary{width:100%;text-align:center}
-  .sticky-cta{display:flex}
 }
 </style>
 </head>
@@ -154,7 +133,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <a href="#o-que-faz">O que faz</a>
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
-      <a href="#testes">Testes & Capacitação</a>
       <a href="#planos">Planos</a>
       <a class="btn primary" href="#contato">Falar agora</a>
     </nav>
@@ -221,20 +199,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
-<!-- TESTES & CAPACITAÇÃO -->
-<section id="testes" class="section">
-  <div class="container">
-    <h2>Testes & Capacitação</h2>
-    <p class="sub">Ferramentas para autoconhecimento, empregabilidade e evolução contínua.</p>
-    <div class="grid-2">
-      <div class="card"><h3>Testes profissionais</h3><p>Vocacional, comportamental e de aptidão, para alinhar talentos às melhores oportunidades.</p></div>
-      <div class="card"><h3>Capacitação prática</h3><p>Quizzes, trilhas e cursos que ajudam candidatos e profissionais a evoluir no ambiente de trabalho.</p></div>
-    </div>
-  </div>
-</section>
-
 <!-- GAMIFICAÇÃO -->
-<section id="gamificacao" class="band section">
+<section id="gamificacao" class="section">
   <div class="container">
     <h2>Gamificação (MatchPoints)</h2>
     <p class="sub">Pontos simples para incentivar evolução contínua e engajamento.</p>
@@ -255,50 +221,62 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
-    <div class="plan-note"><b>Plano Gratuito para Empresas:</b> 1 vaga por 7 dias, até 5 perfis sugeridos.</div>
-
-    <!-- Empresas -->
-    <div id="planos-empresas" class="table-box">
-      <h3>Planos para empresas</h3>
-      <div class="table-scroll">
-        <table class="compare highlight-col-3">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito</th>
-              <th>One-Shot</th>
-              <th>Assinatura</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Vagas ativas</td><td>1</td><td>1</td><td>Ilimitadas</td></tr>
-            <tr><td>Perfis & contato</td><td>5 • parcial</td><td>Ilimitados • completo</td><td>Ilimitados • completo</td></tr>
-            <tr><td>Banco de Talentos</td><td>—</td><td>—</td><td>Incluso</td></tr>
-            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 400 / vaga</td><td>R$ 150/mês</td></tr>
-          </tbody>
-        </table>
+    <div class="plans" id="planos-empresas">
+      <div class="plan-card">
+        <h3>Gratuito</h3>
+        <div class="price">R$ 0</div>
+        <ul>
+          <li>1 vaga ativa</li>
+          <li>5 perfis sugeridos (parcial)</li>
+          <li>Sem banco de talentos</li>
+        </ul>
+        <a href="#contato" class="btn ghost">Começar</a>
+      </div>
+      <div class="plan-card recommended">
+        <span class="tag">Mais escolhido</span>
+        <h3>Assinatura</h3>
+        <div class="price">R$ 150/mês</div>
+        <ul>
+          <li>Vagas ilimitadas</li>
+          <li>Perfis ilimitados (completo)</li>
+          <li>Acesso ao Banco de Talentos</li>
+        </ul>
+        <a href="#contato" class="btn primary">Assinar agora</a>
+      </div>
+      <div class="plan-card">
+        <h3>One-Shot</h3>
+        <div class="price">R$ 400/vaga</div>
+        <ul>
+          <li>1 vaga até ser preenchida (ou 3 meses)</li>
+          <li>Perfis ilimitados (completo)</li>
+          <li>Sem banco de talentos</li>
+        </ul>
+        <a href="#contato" class="btn ghost">Contratar</a>
       </div>
     </div>
 
-    <!-- Candidatos -->
-    <div id="planos-candidato" class="table-box">
-      <h3>Planos para candidatos</h3>
-      <div class="table-scroll">
-        <table class="compare">
-          <thead>
-            <tr>
-              <th>Recursos</th>
-              <th>Gratuito</th>
-              <th>Premium</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Acesso a vagas</td><td>Incluso</td><td>Prioritário</td></tr>
-            <tr><td>Destaque</td><td>—</td><td>Sim</td></tr>
-            <tr><td>Relatório de carreira</td><td>—</td><td>Completo</td></tr>
-            <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 14,90/mês</td></tr>
-          </tbody>
-        </table>
+    <h2 style="margin-top:60px">Planos para candidatos</h2>
+    <div class="plans" id="planos-candidato">
+      <div class="plan-card">
+        <h3>Gratuito</h3>
+        <div class="price">R$ 0</div>
+        <ul>
+          <li>Acesso às vagas</li>
+          <li>Participação nos testes</li>
+          <li>Capacitação básica</li>
+        </ul>
+        <a href="#contato" class="btn ghost">Começar</a>
+      </div>
+      <div class="plan-card recommended">
+        <span class="tag">Recomendado</span>
+        <h3>Premium</h3>
+        <div class="price">R$ 14,90/mês</div>
+        <ul>
+          <li>Acesso prioritário às vagas</li>
+          <li>Destaque nos resultados</li>
+          <li>Relatório completo de carreira</li>
+        </ul>
+        <a href="#contato" class="btn primary">Assinar agora</a>
       </div>
     </div>
   </div>
@@ -319,19 +297,21 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <!-- CONTATO -->
 <section id="contato" class="section">
   <div class="container">
-    <h2 style="text-align:center">Fale com a gente</h2>
-    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form">
-      <input class="input" name="nome" placeholder="Seu nome" required>
-      <input class="input" type="email" name="email" placeholder="E-mail" required>
-      <select class="input" name="perfil" required>
-        <option value="" disabled selected>Sou...</option>
-        <option value="empresa">Empresa</option>
-        <option value="candidato">Candidato ativo</option>
-        <option value="profissional">Profissional empregado</option>
-      </select>
-      <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
-      <button class="btn primary" type="submit">Enviar</button>
-    </form>
+    <div class="form-box">
+      <h3>Fale com a gente</h3>
+      <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST">
+        <input class="input" name="nome" placeholder="Seu nome" required>
+        <input class="input" type="email" name="email" placeholder="E-mail" required>
+        <select class="input" name="perfil" required>
+          <option value="" disabled selected>Sou...</option>
+          <option value="empresa">Empresa</option>
+          <option value="candidato">Candidato ativo</option>
+          <option value="profissional">Profissional empregado</option>
+        </select>
+        <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
+        <button class="btn primary" type="submit">Enviar mensagem</button>
+      </form>
+    </div>
   </div>
 </section>
 
@@ -339,24 +319,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <footer class="section" style="text-align:center;padding:26px 0;border-top:1px solid var(--line);color:#71779a">
   © 2025 MatchWork — Indaial/SC • 
   <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
-  <div class="social-icons">
-    <a href="https://www.instagram.com/matchwork.oficial" target="_blank" aria-label="Instagram">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm9 1.75a1 1 0 1 1 0 2.001 1 1 0 0 1 0-2zm-5.25 2a5.75 5.75 0 1 1 0 11.5 5.75 5.75 0 0 1 0-11.5zm0 1.5a4.25 4.25 0 1 0 0 8.5 4.25 4.25 0 0 0 0-8.5z"/></svg>
-    </a>
-    <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank" aria-label="LinkedIn">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6S0 4.88 0 3.5 1.12 1 2.5 1 5 2.12 5 3.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.1c.5-.9 1.8-1.8 3.7-1.8 4 0 4.7 2.6 4.7 6v9.6h-4V15c0-2.2-.1-5-3-5-3 0-3.4 2.3-3.4 4.8V24h-4V8z"/></svg>
-    </a>
+  <div class="social-icons" style="margin-top:14px;display:flex;justify-content:center;gap:20px">
+    <a href="https://www.instagram.com/matchwork.oficial" target="_blank" aria-label="Instagram">Instagram</a>
+    <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
   </div>
 </footer>
-
-<!-- CTA mobile -->
-<div class="sticky-cta">
-  <a class="btn ghost" href="#planos">Ver planos</a>
-  <a class="btn primary" href="#contato">Falar agora</a>
-</div>
-
-<!-- WhatsApp -->
-<a class="whats" href="https://wa.me/5547999639417?text=Quero%20conhecer%20o%20MatchWork">WhatsApp</a>
 
 <script>
 /* Menu mobile */
